[package]
name = "hue-bridge"
version = "0.1.0-alpha.2"
authors = ["Victor Palade <victor@cloudflavor.io>"]
license = "Apache-2.0"
description = "Asynchronous Hue Bridge API bindings"
repository = "https://github.com/pi-victor/hue-bridge"
readme = "README.md"
keywords = [
  "hue-bridge",
  "hue-lights",
  "hue-lights-control",
  "hue-lighstrip",
  "hue-api",
  "hue-bulbs",
  "hue-entertainment",
  "philips-hue",
]
categories =["web-programming::http-client", "api-bindings"]
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = {version = "^0.11", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.17", features = ["fs"] }

[dev-dependencies]
tokio = { version = "1.17", features = ["macros", "rt-multi-thread"] }

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
